# enea-outages

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.pl.md  check_outage.py  example.py  pyproject.toml  release.sh
.github/workflows/: ci.yml
src/enea_outages/: __init__.py  cli.py  client.py  models.py
tests/: test_client.py
