[tool.poetry]
name = "enea-outages"
description = "Python library to get information about power outages from Enea Operator."
authors = ["TheUndefined <kontakt@distracted.pl>"]
license = "MIT"
readme = "README.md"
packages = [{include = "enea_outages", from = "src"}]
homepage = "https://github.com/TheUndefined/enea-outages"
repository = "https://github.com/TheUndefined/enea-outages"
keywords = ["enea", "outages", "power", "api"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
enea-outages = "enea_outages.cli:main"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.28.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-httpx = "^0.35.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^5.0.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.0"
types-beautifulsoup4 = "^4.12.0"
types-requests = "^2.31.0"


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
pythonpath = ["src"]
