[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "enea-outages"
dynamic = ["version"]
description = "Python library to get information about power outages from Enea Operator."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "TheUndefined" },
]
keywords = ["enea", "outages", "power", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "httpx>=0.26.0", # Pinned to be compatible with pytest-httpx
  "beautifulsoup4>=4.12.2",
]

[project.urls]
"Homepage" = "https://github.com/TheUndefined/enea-outages"
"Bug Tracker" = "https://github.com/TheUndefined/enea-outages/issues"

[project.scripts]
enea-outages = "enea_outages.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0", # Pinned to be compatible with pytest-httpx
    "pytest-httpx>=0.28.0",
  
    "pytest-cov>=5.0.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.0",
    "types-beautifulsoup4>=4.12.0",
    "types-requests>=2.31.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest"
cov = "pytest --cov-report=term-missing --cov-report=xml --cov=src"

[tool.hatch.envs.dev]
dependencies = [
  "pytest>=7.0.0",
  "pytest-httpx>=0.28.0",

  "pytest-cov>=5.0.0",
  "ruff>=0.1.6",
  "black>=23.11.0",
  "mypy>=1.7.0",
  "types-beautifulsoup4>=4.12.0",
  "types-requests>=2.31.0",
]
[tool.hatch.envs.dev.scripts]
lint = "ruff check ."
test = "pytest"
cov = "pytest --cov-report=term-missing --cov-report=xml --cov=src"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
pretty = true

[tool.pytest.ini_options]
pythonpath = ["src"]
